# cdctl

./: INSTALL  NUTSANDBOLTS  cdctl.1  cdctl.c  cdctl.mo  cdctl.po  cdctl.spec  cdctl.spec.in  ioctls.c  iso_header.c  rt.c  sndreset.c  sndreset.pl
cdctl/: LICENSE  Makefile.in  NEWS  PUBLICKEY  README  cdctl.1  cdctl.c  cdctl.h  cdctl.spec  cdctl.spec.in  config.h.in  configure  configure.in  iso_header.c  mkinstalldirs  version.c
